# web-view

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/adr/: 0001-cli-interaction.md
src/web_view/: __init__.py  cdp.py  cli.py
src/web_view/cdp/: __init__.py  _connection.py  _console.py  _evaluate.py  _files.py  _interaction.py  _lifecycle.py  _navigation.py  _network.py  _shared.py  _snapshots.py  _state.py  _window.py
src/web_view/cli/: __init__.py  _download.py  _eval.py  _list.py  _navigate.py  _resize.py  _shared.py  _snap.py  _start.py  _stop.py
src/web_view/cli/_do/: __init__.py  _check.py  _click.py  _dblclick.py  _drag.py  _fill.py  _hover.py  _press.py  _right_click.py  _scroll_into_view.py  _shared.py  _upload.py
src/web_view/cli/_tab/: __init__.py  _close.py  _new.py  _shared.py  _switch.py
tests/: conftest.py  test_cli.py  test_do_frame.py  test_eval_download.py
